test/expected/declare_sic8.out
declare x as signed char8_t
        ^
9: error: "signed char8_t" is illegal for built-in type
